--- a/2023_tsmc_ani.html
+++ b/2023_tsmc_ani.html
@@ -22,22 +22,6 @@
             font-family: 'Montserrat';
             color: #666666;
         }
-
-        /*圖片下邊界*/
-        .w3-row-padding img {
-            margin-bottom: 30px
-        }
-
-        /*圖片中間間隔*/
-        .w3-row-padding,
-        .w3-row-padding>.w3-half,
-        .w3-row-padding>.w3-third,
-        .w3-row-padding>.w3-twothird,
-        .w3-row-padding>.w3-threequarter,
-        .w3-row-padding>.w3-quarter,
-        .w3-row-padding>.w3-col {
-            padding: 12px;
-        }
     </style>
 
 </head>
@@ -87,10 +71,11 @@
             <section class="sc_sponsor main_sc">
                 <div>
                     <!-- 子分類 -->
-                    <div class="sort_cnt" style="position: relative; top: -50px;">
+                    <div class="sort_cnt" style="position: relative; top: -20px;">
                         <div class="sorts" id="tsmc_Sort">
                             <div class="item">
-                                <a id="all" data-cat="all" class="item_link sort_btn_s text-white rwdtxt">所有作品</a>
+                                <a id="all" data-cat="all" class="item_link sort_btn_s text-white rwdtxt">總覽
+                                </a>
                             </div>
                             <div class="item">
                                 <a id="Character" data-cat="character"
@@ -106,64 +91,24 @@
                     </div>
                     <div>
                         <div class="sponsors" id="tsmc_Sort">
-                            <!-- 左行 -->
-                            <div class="w3-third" style=" padding: 20px;">
-                                <!-- 場景 -->
-                                <div class="tsmc_item" data-cat="scene">
-                                    <img src="img\digitimes\project\tsmc_ani\Carbon\晶片博士家-廚房.jpg" style="width:100%">
-                                    <img src="img\digitimes\project\tsmc_ani\DNA\一_開場_影_擦美白霜示意.jpg" style="width:100%">
-                                    <img src="img\digitimes\project\tsmc_ani\Green\飛行器停機坪.jpg" style="width:100%">
-                                    <img src="img\digitimes\project\tsmc_ani\Green\對話區.jpg" style="width:100%">
-                                </div>
 
-                                <!-- 片頭設計 -->
-                                <div class="tsmc_item" data-cat="cover">
-                                    <img src="img\digitimes\project\tsmc_ani\Carbon\cover.jpg" style="width:100%">
-                                </div>
-                                <!-- 角色 -->
-                                <div class="tsmc_item" data-cat="character">
-                                    <img src="img\digitimes\project\tsmc_ani\Green\speak.gif" style="width:100%">
-                                </div>
+                            <!-- 專案說明 -->
+                            <div class="tsmc_item">
+                                <img src="img\digitimes\project\tsmc_ani\Slice 1.png" style="width:100%">
                             </div>
 
-                            <!-- 中行 -->
-                            <div class="w3-third" style=" padding: 20px;">
-                                <!-- 場景 -->
-                                <div class="tsmc_item" data-cat="scene"> 
-                                    <img src="img\digitimes\project\tsmc_ani\DNA\二_DNA組成_互動_滿版凸顯細胞核區域圖.jpg" style="width:100%">
-                                    <img src="img\digitimes\project\tsmc_ani\DNA\三_染色體的影響_互動_互動示意.jpg" style="width:100%">
-                                    <img src="img\digitimes\project\tsmc_ani\DNA\三_染色體的影響_影_10-4示意.jpg" style="width:100%">
-                                    <img src="img\digitimes\project\tsmc_ani\DNA\四_現代DNA應用_影片_16-4示意.jpg" style="width:100%">
-                                </div>
-
-                                <!-- 片頭設計 -->
-                                <div class="tsmc_item" data-cat="cover">
-                                    <img src="img\digitimes\project\tsmc_ani\DNA\示意.jpg" style="width:100%">
-                                    <img src="img\digitimes\project\tsmc_ani\DNA\建築說明.jpg" style="width:100%">
-                                </div>
-                                <!-- 角色 -->
-                                <div class="tsmc_item" data-cat="character">
-                                    <img src="img\digitimes\project\tsmc_ani\Green\滴管.gif" style="width:100%">
-                                </div>
+                            <!-- 片頭設計 -->
+                            <div class="tsmc_item" data-cat="cover">
+                                <img src="img\digitimes\project\tsmc_ani\Slice 2.png" style="width:100%">
+                                <img src="img\digitimes\project\tsmc_ani\Slice 3.png" style="width:100%">
                             </div>
-
-                            <!-- 右行 -->
-                            <div class="w3-third" style=" padding: 20px;">
-                                <!-- 場景 -->
-                                <div class="tsmc_item" data-cat="scene">
-                                    <img src="img\digitimes\project\tsmc_ani\Green\互動4_互動畫面示意.jpg" style="width:100%">
-                                    <img src="img\digitimes\project\tsmc_ani\Green\影片3_哭泣地球示意.jpg" style="width:100%">
-                                </div>
-                                <!-- 片頭設計 -->
-                                <div class="tsmc_item" data-cat="cover">
-                                    <img src="img\digitimes\project\tsmc_ani\Green\示意.jpg" style="width:100%">
-                                    <img src="img\digitimes\project\tsmc_ani\Green\建築說明.jpg" style="width:100%">
-                                </div>
-                                <!-- 角色 -->
-                                <div class="tsmc_item" data-cat="character">
-                                    <img src="img\digitimes\project\tsmc_ani\Green\疑問-說話.gif" style="width:100%">
-                                    <img src="img\digitimes\project\tsmc_ani\Green\開心說話.gif" style="width:100%">
-                                </div>
+                            <!-- 場景 -->
+                            <div class="tsmc_item" data-cat="scene">
+                                <img src="img\digitimes\project\tsmc_ani\Slice 4.png" style="width:100%">
+                            </div>
+                            <!-- 角色 -->
+                            <div class="tsmc_item" data-cat="character">
+                                <img src="img\digitimes\project\tsmc_ani\Slice 5.png" style="width:100%">
                             </div>
 
                         </div>
