--- a/DIGITIMES2023-.html
+++ b/DIGITIMES2023-.html
@@ -103,7 +103,7 @@
 			<section class="sc_sponsor main_sc">
 				<div>
 					<!-- 子分類 -->
-					<div class="sort_cnt" style="position: relative; top: -50px;">
+					<div class="sort_cnt" style="position: relative; top: -35px;">
 						<div class="sorts" id="Ad_Sort">
 							<div class="item">
 								<a id="all" data-cat="all" class="item_link sort_btn_s text-white rwdtxt">所有作品</a>
@@ -398,24 +398,24 @@
 
 			<!-- 左行 -->
 			<div class="w3-third">
-				<div class="image-wrapper"><img src="img/digitimes/kv/2025_1to3/智-桌機Banner.jpg" class="image"
-						style="width:100%"></div>
+				<div class="image-wrapper"><a href="https://www.ic975.com/aiflow/" target="_blank"><img src="img/digitimes/kv/2025_1to3/智-桌機Banner.jpg" class="image"
+						style="width:100%"></a></div>
 				<div class="image-wrapper"><img src="img/digitimes/kv/2025_1to3/幸福推理.jpg" class="image"
 						style="width:100%"></div>
 			</div>
 
 			<!-- 中行 -->
 			<div class="w3-third">
-				<div class="image-wrapper"><img src="img/digitimes/kv/2025_1to3/用-桌機Banner.jpg" class="image"
-						style="width:100%"></div>
+				<div class="image-wrapper"><a href="https://www.ic975.com/aiflow/" target="_blank"><img src="img/digitimes/kv/2025_1to3/用-桌機Banner.jpg" class="image"
+						style="width:100%"></a></div>
 				<div class="image-wrapper"><img src="img/digitimes/kv/2024_7to9/桌機Banner 2.jpg" class="image"
 						style="width:100%"></div>
 			</div>
 
 			<!-- 右行 -->
 			<div class="w3-third">
-				<div class="image-wrapper"><img src="img/digitimes/kv/2025_1to3/優-桌機Banner.jpg" class="image"
-						style="width:100%"></div>
+				<div class="image-wrapper"><a href="https://www.ic975.com/aiflow/" target="_blank"><img src="img/digitimes/kv/2025_1to3/優-桌機Banner.jpg" class="image"
+						style="width:100%"></a></div>
 				<div class="image-wrapper"><img src="img/digitimes/kv/2024_4to6/ic萌寵特別企劃.jpg" class="image"
 						style="width:100%"></div>
 			</div>
@@ -525,7 +525,7 @@
 			<section class="sc_sponsor main_sc">
 				<div>
 					<!-- 子分類 -->
-					<div class="sort_cnt" style="position: relative; top: -50px;">
+					<div class="sort_cnt" style="position: relative; top: -35px;">
 						<div class="sorts" id="layoutSort">
 							<div class="item">
 								<a id="all" data-cat="all" class="layout_link sort_btn_s text-white rwdtxt">所有作品</a>
