--- a/DIGITIMES2023-.html
+++ b/DIGITIMES2023-.html
@@ -14,7 +14,7 @@
 		body,
 		h1 {
 			font-family: 'Montserrat', sans-serif;
-			font-size: 1rem;
+			font-size: 36px;
 			font-weight: bold;
 		}
 
@@ -22,6 +22,10 @@
 			font-family: 'Montserrat';
 			color: #666666;
 		}
+
+		.rwdh6{
+			font-size: 1.1rem;
+			}
 
 		/*圖片下邊界*/
 		.w3-row-padding img {
