20250831 1.更新4to6月的所有公司作品 2.匯入7、8月公司作品 3.更新接案作品

--- a/DIGITIMES2023-.html
+++ b/DIGITIMES2023-.html
@@ -142,6 +142,9 @@
 								</div>
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
+									<!-- 2025 4到6月 -->
+									<img src="img\digitimes\ad\ad\2025_4to6/1141168.jpg" style="width:100%">
+									<img src="img\digitimes\ad\ad\2025_4to6/0503社群.jpg" style="width:100%">
 									<!-- 2024 10到12月 -->
 									<img src="img\digitimes\ad\ad\2024_10to12\1106社群.jpg" style="width:100%">
 									<!-- 2024 7到9月 -->
@@ -207,6 +210,9 @@
 								</div>
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
+									<!-- 2025 4到6月 -->
+									<img src="img\digitimes\ad\ad\2025_4to6/600X90.gif" style="width:100%">
+									<img src="img\digitimes\ad\ad\2025_4to6/0430社群.jpg" style="width:100%">
 									<!-- 2024 10到12月 -->
 									<img src="img\digitimes\ad\ad\2024_10to12\SpecialReport2社群.jpg" style="width:100%">
 									<!-- 2024 7到9月 -->
@@ -271,6 +277,9 @@
 								</div>
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
+									<!-- 2025 4到6月 -->
+									<img src="img\digitimes\ad\ad\2025_4to6/0425社群.jpg" style="width:100%">
+									<img src="img\digitimes\ad\ad\2025_4to6/0415社群.jpg" style="width:100%">
 									<!-- 2024 10到12月 -->
 									<img src="img\digitimes\ad\ad\2024_10to12\1200X1200.jpg" style="width:100%">
 									<!-- 2024 4到6月 -->
@@ -330,6 +339,9 @@
 								</div>
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
+									<!-- 2025 4到6月 -->
+									<img src="img\digitimes\ad\ad\2025_4to6/0411社群.jpg" style="width:100%">
+									<img src="img\digitimes\ad\ad\2025_4to6/0319社群.jpg" style="width:100%">
 									<!-- 2024 10到12月 -->
 									<img src="img\digitimes\ad\ad\2024_10to12\1200x1200B.jpg" style="width:100%">
 									<!-- 2024 4到6月 -->
