--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             <div class="w3-half" style=" padding:20px">
               <p class="text-gray text22"><b>工作經驗</b></p>
               <a href="DIGITIMES2023-.html">
+                <img src="img/digitimes/kv/2025_1to3/智-桌機Banner.jpg" style="width:45%; margin:auto;">
                 <p class="text-gray text17">2023-&emsp;DIGITIMES 視覺設計</p>
               </a><br>
               <p class="text-gray text22"><b>學歷</b></p>
