20251012 更新7to9所有公司作品

--- a/DIGITIMES2023-.html
+++ b/DIGITIMES2023-.html
@@ -23,9 +23,9 @@
 			color: #666666;
 		}
 
-		.rwdh6{
+		.rwdh6 {
 			font-size: 1.1rem;
-			}
+		}
 
 		/*圖片下邊界*/
 		.w3-row-padding img {
@@ -142,6 +142,9 @@
 								</div>
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
+									<!-- 2025 7到9月 -->
+									<img src="img\digitimes\ad\ad\2025_7to9/0801LinkedIn.jpg" style="width:100%">
+									<img src="img\digitimes\ad\ad\2025_7to9/0807FB貼文2.jpg" style="width:100%">
 									<!-- 2025 4到6月 -->
 									<img src="img\digitimes\ad\ad\2025_4to6/1141168.jpg" style="width:100%">
 									<img src="img\digitimes\ad\ad\2025_4to6/0503社群.jpg" style="width:100%">
@@ -179,6 +182,8 @@
 								</div>
 								<!-- 平面廣告 -->
 								<div class="Ad_item" data-cat="print_ad">
+									<!-- 2025 7到9月 -->
+									 <img src="img\digitimes\ad\print_ad\2025_7to9\1141417.jpg" style="width:100%">
 									<!-- 2024 10到12月 -->
 									<img src="img\digitimes\ad\print_ad\2024_10to12\1120全十.jpg" style="width:100%">
 									<!-- 2024 4到6月 -->
@@ -210,6 +215,8 @@
 								</div>
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
+									<!-- 2025 7到9月 -->
+									<img src="img\digitimes\ad\ad\2025_7to9/0812LinkedIn.jpg" style="width:100%">
 									<!-- 2025 4到6月 -->
 									<img src="img\digitimes\ad\ad\2025_4to6/600X90.gif" style="width:100%">
 									<img src="img\digitimes\ad\ad\2025_4to6/0430社群.jpg" style="width:100%">
@@ -249,6 +256,8 @@
 								</div>
 								<!-- 平面廣告 -->
 								<div class="Ad_item" data-cat="print_ad">
+									<!-- 2025 7到9月 -->
+									 <img src="img\digitimes\ad\print_ad\2025_7to9\1141546.jpg" style="width:100%">
 									<!-- 2024 10到12月 -->
 									<img src="img\digitimes\ad\print_ad\2024_10to12\1115全十.jpg" style="width:100%">
 									<!-- 2024 7到9月 -->
@@ -277,6 +286,8 @@
 								</div>
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
+									<!-- 2025 7到9月 -->
+									<img src="img\digitimes\ad\ad\2025_7to9/0819 FB貼文.jpg" style="width:100%">
 									<!-- 2025 4到6月 -->
 									<img src="img\digitimes\ad\ad\2025_4to6/0425社群.jpg" style="width:100%">
 									<img src="img\digitimes\ad\ad\2025_4to6/0415社群.jpg" style="width:100%">
@@ -314,6 +325,8 @@
 								</div>
 								<!-- 平面廣告 -->
 								<div class="Ad_item" data-cat="print_ad">
+									<!-- 2025 7到9月 -->
+									 <img src="img\digitimes\ad\print_ad\2025_7to9\1141586.jpg" style="width:100%">
 									<!-- 2024 10到12月 -->
 									<img src="img\digitimes\ad\print_ad\2024_10to12\1106全十.jpg" style="width:100%">
 									<!-- 2024 4到6月 -->
@@ -339,6 +352,8 @@
 								</div>
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
+									<!-- 2025 7到9月 -->
+									<img src="img\digitimes\ad\ad\2025_7to9/中秋.jpg" style="width:100%">
 									<!-- 2025 4到6月 -->
 									<img src="img\digitimes\ad\ad\2025_4to6/0411社群.jpg" style="width:100%">
 									<img src="img\digitimes\ad\ad\2025_4to6/0319社群.jpg" style="width:100%">
@@ -372,6 +387,8 @@
 								</div>
 								<!-- 平面廣告 -->
 								<div class="Ad_item" data-cat="print_ad">
+									<!-- 2025 7到9月 -->
+									 <img src="img\digitimes\ad\print_ad\2025_7to9\1141769.jpg" style="width:100%">
 									<!-- 2024 7到9月 -->
 									<img src="img\digitimes\ad\print_ad\2024_7to9\全十.jpg" style="width:100%">
 									<!-- 2024 4到6月 -->
@@ -407,16 +424,18 @@
 
 			<!-- 左行 -->
 			<div class="w3-third">
+				<div class="image-wrapper"><img src="img/digitimes/kv/2025_7to9/0913 i Forum 國際教育論壇.jpg" class="image"
+						style="width:100%"></div>
 				<div class="image-wrapper"><a href="https://www.ic975.com/aiflow/" target="_blank"><img
 							src="img/digitimes/kv/2025_1to3/智-桌機Banner.jpg" class="image" style="width:100%"></a></div>
-				<div class="image-wrapper"><img src="img/digitimes/kv/2025_4to6/ic-夏日出走.jpg" class="image"
-						style="width:100%"></div>
 				<div class="image-wrapper"><img src="img/digitimes/kv/2025_1to3/幸福推理.jpg" class="image"
 						style="width:100%"></div>
 			</div>
 
 			<!-- 中行 -->
 			<div class="w3-third">
+				<div class="image-wrapper"><img src="img/digitimes/kv/2025_4to6/ic-夏日出走.jpg" class="image"
+						style="width:100%"></div>
 				<div class="image-wrapper"><a href="https://www.ic975.com/aiflow/" target="_blank"><img
 							src="img/digitimes/kv/2025_1to3/用-桌機Banner.jpg" class="image" style="width:100%"></a></div>
 				<div class="image-wrapper"><img src="img/digitimes/kv/2025_4to6/ic-晚安Fun音樂.jpg" class="image"
@@ -440,7 +459,9 @@
 
 			<!-- 左行 -->
 			<div class="w3-third">
-				<div class="image-wrapper"><img src="img/digitimes/kv/2025_4to6/0725Dforum.jpg" class="image"
+				<div class="image-wrapper"><img src="img/digitimes/kv/2025_7to9/0718智慧機械.jpg" class="image"
+						style="width:100%"></div>
+				<div class="image-wrapper"><img src="img/digitimes/kv/2025_7to9/0725Dforum.jpg" class="image"
 						style="width:100%"></div>
 				<div class="image-wrapper"><img src="img/digitimes/kv/2025_1to3/20250121Dforum.jpg" class="image"
 						style="width:100%"></div>
@@ -450,10 +471,16 @@
 				</div>
 				<div class="image-wrapper"><img src="img/digitimes/kv/2023_3to8/ASC_kv.jpg" class="image"
 						style="width:100%"></div>
+				<div class="image-wrapper"><img src="img/digitimes/kv/2023_9to12/v2-2.jpg" class="image"
+						style="width:100%"></div>
 			</div>
 
 			<!-- 中行 -->
 			<div class="w3-third">
+				<div class="image-wrapper"><img src="img/digitimes/kv/2025_7to9/0808mcu.jpg" class="image"
+						style="width:100%"></div>
+				<div class="image-wrapper"><img src="img/digitimes/kv/2025_7to9/ces2026.jpg" class="image"
+						style="width:100%"></div>
 				<div class="image-wrapper"><img src="img/digitimes/kv/2025_4to6/1141481.jpg" class="image"
 						style="width:100%"></div>
 				<div class="image-wrapper"><img src="img/digitimes/kv/2025_4to6/0626Dforum.jpg" class="image"
@@ -468,6 +495,10 @@
 
 			<!-- 右行 -->
 			<div class="w3-third">
+				<div class="image-wrapper"><img src="img/digitimes/kv/2025_7to9/AI Search.jpg" class="image"
+						style="width:100%"></div>
+				<div class="image-wrapper"><img src="img/digitimes/kv/2025_7to9/關稅系列研究報告.jpg" class="image"
+						style="width:100%"></div>
 				<div class="image-wrapper"><img src="img/digitimes/kv/2025_4to6/0411 hpc.jpg" class="image"
 						style="width:100%"></div>
 				<div class="image-wrapper"><img src="img/digitimes/kv/2025_4to6/0521b.jpg" class="image"
@@ -476,8 +507,7 @@
 						style="width:100%"></div>
 				<div class="image-wrapper"><img src="img/digitimes/kv/2024_10to12/20241206Dforum.jpg" class="image"
 						style="width:100%"></div>
-				<div class="image-wrapper"><img src="img/digitimes/kv/2023_9to12/v2-2.jpg" class="image"
-						style="width:100%"></div>
+				
 
 			</div>
 			<!-- 分類標題 -->
@@ -488,6 +518,8 @@
 			</div>
 			<!-- 左行 -->
 			<div class="w3-third">
+				<div class="image-wrapper"><img src="img/digitimes/kv/2025_7to9/Henkel ebook.jpg" class="image"
+						style="width:100%"></div>
 				<div class="image-wrapper"><img src="img/digitimes/kv/2025_1to3/富士通.jpg" class="image"
 						style="width:100%"></div>
 				<div class="image-wrapper"><img src="img/digitimes/kv/2024_7to9/5b-ol.jpg" class="image"
@@ -498,7 +530,8 @@
 
 			<!-- 中行 -->
 			<div class="w3-third">
-
+				<div class="image-wrapper"><img src="img/digitimes/kv/2025_7to9/0912 Henkel SEMICON.jpg" class="image"
+						style="width:100%"></div>
 				<div class="image-wrapper"><img src="img/digitimes/kv/2024_10to12/1132667.jpg" class="image"
 						style="width:100%"></div>
 				<div class="image-wrapper"><img src="img/digitimes/kv/2023_3to8/kv_c.jpg" class="image"
@@ -509,6 +542,8 @@
 
 			<!-- 右行 -->
 			<div class="w3-third">
+				<div class="image-wrapper"><img src="img/digitimes/kv/2025_7to9/2025自動化展會.jpg" class="image"
+						style="width:100%"></div>
 				<div class="image-wrapper"><img src="img/digitimes/kv/2025_4to6/0423amazon.jpg" class="image"
 						style="width:100%"></div>
 				<div class="image-wrapper"><img src="img/digitimes/kv/2024_7to9/a.jpg" class="image" style="width:100%">
@@ -521,6 +556,18 @@
 		<!-- Projects Grid ,Project ------------------------------------------------------------------------------->
 		<div class="w3-row-padding tabcontent margin-right-left" id="project">
 			<!-- 左行 -->
+			 <div class="w3-third">
+				<div class="image-wrapper container">
+					<img src="img/digitimes/kv/2025_7to9/2025自動化展會.jpg" class="image" style="width:100%">
+					<div class="overlay">
+						<a href="2025_auto.html" target="_blank">
+							<div class="text">自動化大展<br>2025</div>
+						</a>
+					</div>
+				</div>
+			</div>
+			
+			<!-- 中行 -->
 			<div class="w3-third">
 				<div class="image-wrapper container">
 					<img src="img/digitimes/project/2025創業家日報遊戲/首頁.jpg" class="image" style="width:100%">
@@ -532,7 +579,7 @@
 				</div>
 			</div>
 
-			<!-- 中行 -->
+			<!-- 右行 -->
 			<div class="w3-third">
 				<div class="image-wrapper container">
 					<img src="img/digitimes/project/tsmc_ani/Green/示意.jpg" class="image" style="width:100%">
@@ -544,9 +591,8 @@
 				</div>
 			</div>
 
-			<!-- 右行 -->
-			<div class="w3-third">
-			</div>
+			
+			
 
 		</div>
 
@@ -612,6 +658,7 @@
 							<div class="w3-quarter" style=" padding: 20px;">
 								<!-- print -->
 								<div class="ly_item" data-cat="print">
+									<img src="img\digitimes\layout\print\2025_7to9\示意.jpg" style="width:100%">
 									<img src="img\digitimes\layout\print\2025_4to6\1141348.jpg" style="width:100%">
 									<img src="img\digitimes\layout\print\2025_1to3\2025aiexpo-award.jpg"
 										style="width:100%">
