--- a/DIGITIMES2023-.html
+++ b/DIGITIMES2023-.html
@@ -641,7 +641,7 @@
 			<section class="sc_sponsor main_sc">
 				<div>
 					<!-- 子分類 -->
-					<div class="sort_cnt" style="position: relative; top: -35px;">
+					<!-- <div class="sort_cnt" style="position: relative; top: -35px;">
 						<div class="sorts" id="layoutSort">
 							<div class="item">
 								<a id="all" data-cat="all" class="layout_link sort_btn_s text-white rwdtxt">所有作品</a>
@@ -651,7 +651,7 @@
 									class="layout_link sort_btn_s text-white rwdtxt">字卡</a>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<div>
 						<div class="sponsors" id="layoutCnt">
 							<!-- 左行 -->
