--- a/2025_auto.html
+++ b/2025_auto.html
@@ -89,6 +89,9 @@
 					<img src="img/digitimes/kv/2025_7to9/2025自動化展會.jpg" style="width:100%" class="image">
 				</div>
 				<div class="container">
+					<img src="img/digitimes/project/2025自動化大展/2025自動化展會.jpg" style="width:100%" class="image">
+				</div>
+				<div class="container">
 					<img src="img/digitimes/project/2025自動化大展/1141546.JPG" style="width:100%" class="image">
 				</div>
 			</div>
