--- a/2025_auto.html
+++ b/2025_auto.html
@@ -88,9 +88,7 @@
 				<div class="container">
 					<img src="img/digitimes/kv/2025_7to9/2025自動化展會.jpg" style="width:100%" class="image">
 				</div>
-				<div class="container">
-					<img src="img/digitimes/project/2025自動化大展/2025自動化展會.jpg" style="width:100%" class="image">
-				</div>
+				
 				<div class="container">
 					<img src="img/digitimes/project/2025自動化大展/1141546.JPG" style="width:100%" class="image">
 				</div>
@@ -99,13 +97,13 @@
 			<!-- 中行 -->
 			<div class="w3-third">
 				<div class="container">
-					<img src="img/digitimes/project/2025自動化大展/抬頭卡_主持人.JPG" style="width:100%" class="image">
+					<img src="img/digitimes/project/2025自動化大展/抬頭卡主持人.JPG" style="width:100%" class="image">
 				</div>
 				<div class="container">
-					<img src="img/digitimes/project/2025自動化大展/抬頭卡_主持人+受訪者.JPG" style="width:100%" class="image">
+					<img src="img/digitimes/project/2025自動化大展/抬頭卡主持人受訪者.JPG" style="width:100%" class="image">
 				</div>
 				<div class="container">
-					<img src="img/digitimes/project/2025自動化大展/抬頭卡_主持人+受訪者 透空.JPG" style="width:100%" class="image">
+					<img src="img/digitimes/project/2025自動化大展/抬頭卡主持人受訪者透空.JPG" style="width:100%" class="image">
 				</div>
 				<div class="container">
 					<img src="img/digitimes/project/2025自動化大展/直播舞台背板.JPG" style="width:100%" class="image">
