--- a/2025_auto.html
+++ b/2025_auto.html
@@ -90,36 +90,36 @@
 				</div>
 				
 				<div class="container">
-					<img src="img/digitimes/project/2025自動化大展/1141546.JPG" style="width:100%" class="image">
+					<img src="img/digitimes/project/2025自動化大展/1141546.jpg" style="width:100%" class="image">
 				</div>
 			</div>
 
 			<!-- 中行 -->
 			<div class="w3-third">
 				<div class="container">
-					<img src="img/digitimes/project/2025自動化大展/抬頭卡主持人.JPG" style="width:100%" class="image">
+					<img src="img/digitimes/project/2025自動化大展/抬頭卡主持人.jpg" style="width:100%" class="image">
 				</div>
 				<div class="container">
-					<img src="img/digitimes/project/2025自動化大展/抬頭卡主持人受訪者.JPG" style="width:100%" class="image">
+					<img src="img/digitimes/project/2025自動化大展/抬頭卡主持人受訪者.jpg" style="width:100%" class="image">
 				</div>
 				<div class="container">
-					<img src="img/digitimes/project/2025自動化大展/抬頭卡主持人受訪者透空.JPG" style="width:100%" class="image">
+					<img src="img/digitimes/project/2025自動化大展/抬頭卡主持人受訪者透空.jpg" style="width:100%" class="image">
 				</div>
 				<div class="container">
-					<img src="img/digitimes/project/2025自動化大展/直播舞台背板.JPG" style="width:100%" class="image">
+					<img src="img/digitimes/project/2025自動化大展/直播舞台背板.jpg" style="width:100%" class="image">
 				</div>
 			</div>
 
 			<!-- 右行 -->
 			<div class="w3-third">
 				<div class="container">
-					<img src="img/digitimes/project/2025自動化大展/_PTA8552.JPG" style="width:100%" class="image">
+					<img src="img/digitimes/project/2025自動化大展/_PTA8552.jpg" style="width:100%" class="image">
 				</div>
 				<div class="container">
-					<img src="img/digitimes/project/2025自動化大展/_PTA8799.JPG" style="width:100%" class="image">
+					<img src="img/digitimes/project/2025自動化大展/_PTA8799.jpg" style="width:100%" class="image">
 				</div>
 				<div class="container">
-					<img src="img/digitimes/project/2025自動化大展/宣傳立架.JPG" style="width:100%" class="image">
+					<img src="img/digitimes/project/2025自動化大展/宣傳立架.jpg" style="width:100%" class="image">
 				</div>
 			</div>
 		</div>
