20251207修改錯誤圖片

--- a/2025_auto.html
+++ b/2025_auto.html
@@ -113,10 +113,10 @@
 			<!-- 右行 -->
 			<div class="w3-third">
 				<div class="container">
-					<img src="img/digitimes/project/2025自動化大展/_PTA8552.jpg" style="width:100%" class="image">
+					<img src="img/digitimes/project/2025自動化大展/PTA8552.jpg" style="width:100%" class="image">
 				</div>
 				<div class="container">
-					<img src="img/digitimes/project/2025自動化大展/_PTA8799.jpg" style="width:100%" class="image">
+					<img src="img/digitimes/project/2025自動化大展/PTA8799.jpg" style="width:100%" class="image">
 				</div>
 				<div class="container">
 					<img src="img/digitimes/project/2025自動化大展/宣傳立架.jpg" style="width:100%" class="image">
